--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 .cabecalho-imagem{
     width: 10%;
 }
+.cabecalho {
+    background-color: #424E61;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 24px 0;
+}
