--- a/style.css
+++ b/style.css
@@ -12,4 +12,9 @@
 .cabecalho-lista-item{
     display: inline-block;
     margin: 0 16px;
+    font-size: 24px;
+}
+*{
+    margin: 0;
+    padding: 0;
 }
