--- a/style.css
+++ b/style.css
@@ -18,3 +18,13 @@
     margin: 0;
     padding: 0;
 }
+.escola-imagem{
+    width: 25%;
+}
+.escola{
+    background-image: linear-gradient(#424E61, #4EBFE9);
+    color: white;
+    display: flex;
+}
+
+
