--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-.cabecalho-imagem{
-    width: 10%;
-    }
+* {
+    margin: 0;
+    padding: 0;
+}
+
 .cabecalho {
     background-color: #424E61;
     color: white;
@@ -9,22 +11,36 @@
     align-items: center;
     padding: 24px 0;
 }
+
+.cabecalho-imagem{
+    width: 15%;
+}
+
 .cabecalho-lista-item{
     display: inline-block;
     margin: 0 16px;
-    font-size: 24px;
+    font-size: 20px;
 }
-*{
-    margin: 0;
-    padding: 0;
-}
+
 .escola-imagem{
     width: 25%;
 }
+
 .escola{
-    background-image: linear-gradient(#424E61, #4EBFE9);
-    color: white;
+    background-image: linear-gradient(#424E61,#16CFF8);
+    color:white;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
 }
+
+.escola-div-conteudo{
+    width: 35%;
+}
+.escola-titulo{
+    padding: 24px 0;
+}
+
 
 
